# Store-API-FastAPI-DIO-Python-Backend

./: .pre-commit-config.yaml  pyproject.toml
store/: main.py  routers.py
store/controllers/: product_controller.py
store/db/: mongo.py
store/models/: product_model.py
store/schemas/: base_schema.py  product_schema.py
store/usecases/: product_usercase.py
tests/: conftest.py  factories.py
tests/controllers/: test_product_controller.py
tests/schemas/: test_product_schema.py
tests/usecases/: test_product_usecase.py
