[tool.poetry]
name = "tdd-project"
version = "0.1.0"
description = ""
authors = ["Halyson Itallo <halyssonpimentell@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
motor = "^3.3.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.5.0"
httpx = "^0.25.1"
taskipy = "^1.12.2"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"

[tool.flake8]
# Check that this is aligned with your other tools like Black
extend-select = ["B950"]
max-line-length = 119
exclude = [
  # No need to traverse our git directory
  ".git",
  # There's no value in checking cache directories
  "__pycache__",
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
  # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
  # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
  # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
  # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
  # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
  "E203",
  "E501",
  "E701",
]

[tool.black]
line-length = 119
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["asimov_backend", "config"]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--strict-config", "--strict-markers", "--ignore=docs_src"]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn store.main:app --reload"
create-migrations = "alembic revision --autogenerate"
run-migrations = "alembic upgrade head"
